:rocket: complete user crud with sqlite

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 APP_NAME=teste
+
+DB_DRIVER=pdo_sqlite
+#pdo_sqlite | pdo_mysql
+DB_PATH=C:\Users\jbcam\projects_windows\slim-php-doctrine\src\Infrastructure\Doctrine\db.sqlite
+#DB_HOST=localhost
+#DB_NAME=slim
+#DB_USER=root
+#DB_PASSWORD=root
