--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.1",
         "ext-json": "*",
         "doctrine/migrations": "^3.6",
         "doctrine/orm": "^2.16",
@@ -59,7 +59,7 @@
         }
     },
     "scripts": {
-        "start": "php -S localhost:8080 -t public",
+        "dev": "php -S localhost:8080 -t public",
         "test": "phpunit"
     }
 }
