--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,6 @@
     },
     "scripts": {
         "dev": "php -S localhost:8080 -t public",
-        "test": "phpunit"
+        "test": "php vendor/bin/phpunit --testdox --coverage-clover clover.xml"
     }
 }
